# Marine-AIS-Tracker

./: .env.example  README.md  main.py  project_desc.md  pyproject.toml  sample.md
ais_airflow/.astro/: config.yaml
ais_airflow/dags/: maritime_pipeline.py
ais_airflow/shipping_tracker/: .user.yml  dbt_project.yml  profiles.yml
ais_airflow/shipping_tracker/models/marts/: fct_regional_vessels.sql  fct_vessel_current_status.sql  fct_vessel_history.sql
ais_airflow/shipping_tracker/models/staging/: sources.yml  stg_datalastic_mesh.sql  stg_position_reports.sql  stg_ship_static_data.sql
ais_airflow/shipping_tracker/snapshots/: snp_ship_static_data.sql
dashboard/: package-lock.json  package.json
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: alert-feed.tsx  conflict-insights.tsx  header.tsx  intelligence-modal.tsx  map-view.tsx  tactical-overlay.tsx  vessel-inspector.tsx
dashboard/src/lib/: conflict-zone.ts  mock-data.ts
scripts/GCP/: daataalastiic_regional_mesh.py
scripts/snowflake/: connection.sql  raw.sql
shipping_tracker/: dbt_project.yml
shipping_tracker/models/marts/: fct_vessel_history.sql
shipping_tracker/models/staging/: sources.yml  stg_position_reports.sql
shipping_tracker/snapshots/: snp_ship_static_data.sql
